# cpp-project-start

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.sublime/: project.sublime-project
app/: CMakeLists.txt  Main.cpp
cmake/: Colors.cmake  Config.hpp.in  Doctest.cmake  Documentation.cmake  FetchExternal.cmake  Misc.cmake  Warnings.cmake
cmake/toolchains/: clang-linux-x86_64.cmake  gcc-linux-x86_64.cmake
code/include/sample/: Example.hpp
code/include/sampleheader/: Exampleheader.hpp
code/src/sample/: Example.cpp
tests/: CMakeLists.txt  Dummy.cpp
